meja/tests/fun_no_arrow.stderr
File "tests/fun_no_arrow.meja", line 1, characters 16-17:
Error: Expected => before {

