meja/tests/fun_no_arrow.meja
let x = fun (x) {
  x;
};
